# splatoon

./: .gitignore  Package.swift  project.yml
Resources/: AppIcon.icns  make_icon.swift
Sources/Splatoon/: AppModel.swift  ContentView.swift  DepthFusionMesher.swift  FrameSelection.swift  GalleryModel.swift  GalleryView.swift  LocalFileServer.swift  MeshExport.swift  MeshSettings.swift  MeshViewer.swift  ModelLocator.swift  MultiImageReconstructor.swift  PhotogrammetryMesher.swift  SceneGrouping.swift  SceneProgressBar.swift  SettingsView.swift  SharpModel.swift  SplatCache.swift  SplatDetailView.swift  SplatExport.swift  SplatImport.swift  SplatViewer.swift  SplatoonApp.swift  ToolLocator.swift  TripoSplatRunner.swift
scripts/: build-app.sh  create-signing-cert.sh  fetch-model.sh  fetch-tools.sh
tripo-cli/: .gitignore  README.md  pyproject.toml
tripo-cli/src/tripo_cli/: __init__.py  cli.py  model.py  triposplat.py
